link to contact form

--- a/html/contactForm.html
+++ b/html/contactForm.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/contactForm.css">
+	<link rel="stylesheet" type="text/css" href="../css/contactForm.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- <script type="text/javascript" src="js/form.js"></script> -->
 	<script>
