--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
 	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="nav">
 		 <ul>
-		 	<li>Home</li>
-		 	<li>Services</li>
-		 	<li>Support</li>
-		 	<li>Contact</li>
+		 	<li>Home <i class="fa fa-desktop"></i></i> </li>
+		 	<li>Services <i class="fa fa-plug"></i></li>
+		 	<li>Support<i class="fas fa-headset"></i></li>
+		 	<li><a href="html/contactForm.html" style="text-decoration: none;">Signup </a></li>
 		 </ul>
 	</div>
 
@@ -24,7 +28,7 @@
 		<div class="intro-text">
 			<p>In our world of imagination connecting to your very own world, we feast your eyes beyond comtemplory science into world of impossibilities, welcome to movie hock</p>
 		</div>
-		<div class="Services">
+		<div class="Services justify-content-md-center">
 			<div class="single-service" style="width: 70%;border:2px #eee solid;">
 				<h3>Project Power</h3>
 				<img src="images/project-power-poster-netflix.jpg" style="width: 100%"/>
