edited index & css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 		 <ul>
 		 	<li>Home <i class="fa fa-desktop"></i></i> </li>
 		 	<li>Services <i class="fa fa-plug"></i></li>
-		 	<li>Support<i class="fas fa-headset"></i></li>
-		 	<li><a href="html/contactForm.html" style="text-decoration: none;">Signup </a></li>
+		 	<li>Support <i class="fa fa-life-ring"></i></li>
+		 	<li><a href="html/contactForm.html" style="text-decoration: none;">Signup 
+		 		<i class="fa fa-user-plus"></i> </a></li>
 		 </ul>
 	</div>
 
@@ -29,7 +30,23 @@
 			<p>In our world of imagination connecting to your very own world, we feast your eyes beyond comtemplory science into world of impossibilities, welcome to movie hock</p>
 		</div>
 		<div class="Services justify-content-md-center">
-			<div class="single-service" style="width: 70%;border:2px #eee solid;">
+			<div class="single-service" >
+				<h3>Project Power</h3>
+				<img src="images/project-power-poster-netflix.jpg" style="width: 100%"/>
+				<p>
+					Project Power is a 2020 American superhero film directed by Henry Joost and Ariel Schulman, produced by Eric Newman and Bryan Unkeless, and written by Mattson Tomlin. It stars Jamie Foxx, Joseph Gordon-Levitt, and Dominique Fishback, alongside Colson Baker, Rodrigo Santoro, Amy Landecker and Allen Maldonado, and follows a drug dealer, a police officer, and a former soldier who team up to stop the distribution of a pill that gives the user superpowers for five minutes.
+				</p>
+			</div>
+
+			<div class="single-service" >
+				<h3>Project Power</h3>
+				<img src="images/project-power-poster-netflix.jpg" style="width: 100%"/>
+				<p>
+					Project Power is a 2020 American superhero film directed by Henry Joost and Ariel Schulman, produced by Eric Newman and Bryan Unkeless, and written by Mattson Tomlin. It stars Jamie Foxx, Joseph Gordon-Levitt, and Dominique Fishback, alongside Colson Baker, Rodrigo Santoro, Amy Landecker and Allen Maldonado, and follows a drug dealer, a police officer, and a former soldier who team up to stop the distribution of a pill that gives the user superpowers for five minutes.
+				</p>
+			</div>
+
+			<div class="single-service" style="width: 70%;border:2px #eee solid">
 				<h3>Project Power</h3>
 				<img src="images/project-power-poster-netflix.jpg" style="width: 100%"/>
 				<p>
